--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -1,10 +1,12 @@
 = Modul VSK Gruppe g08
 Roland Gisler <roland.gisler@hslu.ch>
-V0.0.1, 2024-02-19
+V0.1.0, 2024-04-18
 :imagesdir: ./images
 :toc:
 :toc-title: Inhaltsverzeichnis
 :toclevels: 1
+
+image::HSLU-Logo-21-klein.png[HSLU-Logo]
 
 == Einführung
 Das ist die Dokumentation (auch als link:index.pdf[PDF]) der Gruppe g08.
@@ -12,35 +14,19 @@ Das ist die Dokumentation (auch als link:index.pdf[PDF]) der Gruppe g08.
 == Team
 Das Team besteht aus folgenden Personen:
 
- * Name, Vorname <vorname.name@stud.hslu.ch>
- * Name, Vorname <vorname.name@stud.hslu.ch>
- * Name, Vorname <vorname.name@stud.hslu.ch>
+ * Omerovic, Eldar <eldar.omerovic@stud.hslu.ch>
+ * Rueger, Jan <jan.rueger@stud.hslu.ch>
+ * Scholtysik, Laurin <laurin.scholtysik@stud.hslu.ch>
+ * Senn, Enya <enya.senn@stud.hslu.ch>
 
-== Thema 1: Projekt für Dokumentation
-Unsere Empfehlung: Schreiben Sie Ihre Dokumentation als https://asciidoc.org/[AsciiDoc] im Verzeichnis src/docs/asciidoc in *.adoc-Dateien.
-Dafür gibt es für viele IDE's Editor-Plugins die auch ein Preview/Wysiwyg anbieten.
+== Conceptual Documentation
 
-== Thema 2: tbd
-tbd
+* link:conceptual/C4Documentation.adoc[C4 Documentation]
+* link:conceptual/TestingStrategy.adoc[Testing Strategy]
 
-== Appendix: Beispiele
-Man kann ganz einfach Bilder integrieren:
+== Technical Documentation
 
-image::HSLU-Logo-21-klein.png[HSLU-Logo]
-
-Und wichtige Textstellen mit verschiedenen Levels auszeichnen:
-
-WARNING: Das ist eine Warnung!
-
-TIP: Das ist ein Tipp!
-
-IMPORTANT: Das ist wichtig!
-
-CAUTION: Achtung, das ist gefährlich!
-
-NOTE: Das ist ein kleiner Hinweis.
-
-Und man kann auch zitieren:
-
-[quote,Albert Einstein]
-Ein Mensch der keine Fehler macht, hat nie etwas neues ausprobiert.
+* link:technical/LoggerServerAsDockerContainer.adoc[Logger Server as Docker Container]
+* link:technical/LogStrategies.adoc[Log Strategies]
+* link:technical/CreateLoggerInstance.adoc[Create Logger Instance]
+* link:technical/LogMessageFromClientToFile.adoc[Log-Message From Client To File - The Process]
